metadatosweb-service-static-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: metadatosweb
  labels:
    app: metadatos
spec:
  selector:
    app: metadatos
    tier: web
  ports:
  - port: 80
    targetPort: 3005
  type: LoadBalancer
  loadBalancerIP: "YOUR.IP.ADDRESS.HERE"
