metadatosweb-ingress-static-ip.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: metadatosweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: metadatosweb-ip
  labels:
    app: metadatos
spec:
  backend:
    serviceName: hmetadatosweb-backend
    servicePort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: metadatosweb-backend
  labels:
    app: metadatos
spec:
  type: NodePort
  selector:
    app: metadatos
    tier: web
  ports:
  - port: 3005
    targetPort: 3005
